# python-template

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py  index.rst
